# ASMJSDemo

./: CMakeLists.txt  README.md  shell.html
cmake/: UtilityFunctions.cmake
lib/humble/: library_cloudfs.jslib  library_humble.jslib
src/: AssetManager.cpp  AssetManager.h  Color.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  FileSystem.cpp  FileSystem.h  Game.cpp  Game.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Rect.h  Renderable.h  Renderer.cpp  Renderer.h  Renderer_SDL2.cpp  Renderer_SDL2.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Texture_SDL2.cpp  Texture_SDL2.h  Updatable.h  Vector2.h  main.cpp
